@@ -14,21 +14,11 @@
 # limitations under the License.
 #
 
-ARG BASE=alpine:3.14
+ARG BASE=alpine:3.15
 FROM ${BASE} as builder
 RUN wget https://iotech.jfrog.io/artifactory/api/security/keypair/public/repositories/alpine-release -O /etc/apk/keys/alpine.dev.rsa.pub
-RUN echo 'https://iotech.jfrog.io/artifactory/alpine-release/v3.14/main' >> /etc/apk/repositories
-RUN apk add --update --no-cache build-base wget git gcc cmake make yaml-dev libcurl curl-dev libmicrohttpd-dev util-linux-dev ncurses-dev paho-mqtt-c-dev-1.3 hiredis-dev
-
-
-ENV CBOR_VERSION=0.5.0
-RUN mkdir /tmp/cbor \
-  && cd /tmp/cbor \
-  && wget -O - https://github.com/PJK/libcbor/archive/v${CBOR_VERSION}.tar.gz | tar -z -x -f - \
-  && sed -e 's/-flto//' -i libcbor-${CBOR_VERSION}/CMakeLists.txt \
-  && cmake -DCMAKE_BUILD_TYPE=Release -DCBOR_CUSTOM_ALLOC=ON libcbor-${CBOR_VERSION} \
-  && make \
-  && make install
+RUN echo 'https://iotech.jfrog.io/artifactory/alpine-release/v3.15/main' >> /etc/apk/repositories
+RUN apk add --update --no-cache binutils gcc libc-dev make git cmake yaml-dev curl-dev libmicrohttpd-dev util-linux-dev ncurses-dev libcbor-dev paho-mqtt-c-dev-1.3 hiredis-dev
 
 RUN mkdir /tmp/sdk
 COPY VERSION /tmp/sdk
@@ -45,8 +35,8 @@ FROM ${BASE}
 LABEL maintainer="IOTech <support@iotechsys.com>"
 
 RUN wget https://iotech.jfrog.io/artifactory/api/security/keypair/public/repositories/alpine-release -O /etc/apk/keys/alpine.dev.rsa.pub
-RUN echo 'https://iotech.jfrog.io/artifactory/alpine-release/v3.14/main' >> /etc/apk/repositories
-RUN apk add --update --no-cache build-base wget git gcc cmake make yaml curl libmicrohttpd libuuid paho-mqtt-c-dev-1.3 hiredis-dev
+RUN echo 'https://iotech.jfrog.io/artifactory/alpine-release/v3.15/main' >> /etc/apk/repositories
+RUN apk add --update --no-cache binutils gcc libc-dev make git cmake yaml curl libmicrohttpd libuuid libcbor paho-mqtt-c-dev-1.3 hiredis-dev
 
 COPY --from=builder /usr/local/include/iot /usr/local/include/iot
 COPY --from=builder /usr/local/include/edgex /usr/local/include/edgex
